--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i" rel="stylesheet">
     <title>cbsite-jss</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
